# ai-agent-observatory

./: .gitignore  ARCHITECTURE.md  Advancements.md  OBSERVATORY_DATA_MAPPING.md  PROJECT_STRUCTURE.md  README.md  backend-structure.md  check_db.py  clear.py  fix-panel-architecture.md  frontend-structure.md  md.md  observatory.db  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_results.txt  test_results2.txt  test_results3.txt  x.py  y.py
.claude/: settings.local.json
MD/: claude.md  stories.md
ai_agent_observatory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
api/: __init__.py  dependencies.py  main.py
api/config/: __init__.py  plugin_map.py  settings.py  story_definitions.py
api/models/: __init__.py  alerts.py  analytics.py  base.py  batch.py  code_location.py  conversation.py  dashboard.py  experiment.py  filters.py  llm_call.py  metadata.py  optimization.py  responses.py  user_preferences.py  webhooks.py
api/routers/: __init__.py  alerts.py  analysis.py  analytics.py  calls.py  chat.py  experiments.py  llm_calls.py  metadata.py  optimization_queue.py  optimizations.py  stories.py  webhooks.py
api/routers/stories/: __init__.py  _helpers.py  cache.py  calls.py  cost.py  latency.py  optimization.py  prompt.py  quality.py  routing.py  token.py
api/services/: __init__.py  alert_service.py  analytics_service.py  batch_service.py  cache_service.py  call_service.py  cost_service.py  dashboard_service.py  experiment_service.py  fix_analysis_service.py  latency_service.py  llm_call_service.py  optimization_queue_service.py  optimization_service.py  prompt_service.py  quality_service.py  routing_service.py  token_service.py  webhook_service.py
api/utils/: __init__.py  aggregators.py  data_fetcher.py  exceptions.py  formatters.py  story_analyzer.py
dashboard/: __init__.py  app.py  observatory.db  optimizer_state.py
dashboard/.streamlit/: config.toml
dashboard/components/: __init__.py  charts.py  filters.py  metric_cards.py  metrics.py  story_card.py  tables.py
dashboard/config/: __init__.py  filter_keys.py  plugin_map.py  story_definitions.py
dashboard/pages/: __init__.py  activity_monitor.py  cache_analyzer.py  cost_analysis.py  cost_estimator.py  home.py  latency_profiling.py  live_demo.py  llm_judge.py  model_router.py  optimization_impact.py  optimizations.py  overview.py  prompt_optimizer.py  settings.py  story_insights.py
dashboard/templates/: integration_patterns.py  observatory_config.py  observatory_tracking_template.py  tracking_template.py
dashboard/utils/: __init__.py  aggregators.py  data_fetcher.py  formatters.py  story_analyzer.py
examples/: compare_frameworks.py  monitor_basic.py  monitor_code_review.py
frontend/: package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Stories.jsx
frontend/src/components/Layer2Table/: AddColumnDropdown.jsx  FilterBar.jsx  QuickFilters.jsx  index.jsx
frontend/src/components/common/: AlertBox.jsx  BackButton.jsx  ErrorDisplay.jsx  KPICard.jsx  Loading.jsx  PageHeader.jsx  SectionCard.jsx  StatBadge.jsx  StatusBadge.jsx  TopOffenderCard.jsx
frontend/src/components/layout/: Footer.jsx  Header.jsx  PageContainer.jsx  Sidebar.jsx
frontend/src/components/stories/: CodeCentricView.jsx  LLMCallDetail.jsx  OperationTable.jsx  OptimizationHierarchy.jsx  StoryCard.jsx  StoryNavTabs.jsx
frontend/src/config/: columnDefinitions.js  routes.js  storyDefinitions.js  theme.js
frontend/src/constants/: apiEndpoints.js  storyDefinitions.js
frontend/src/context/: TimeRangeContext.jsx
frontend/src/hooks/: useCalls.js  useDebounce.js  useStories.js
frontend/src/pages/: Dashboard.jsx  OptimizationQueue.jsx
frontend/src/services/: api.js  observatoryApi.js
frontend/src/styles/: index.css
frontend/src/utils/: formatters.js  helpers.js  themeUtils.js  validators.js
observatory/: __init__.py  cache.py  collector.py  judge.py  models.py  prompts.py  router.py  semantic_cache.py  storage.py
observatory/analyzers/: __init__.py  cost_analyzer.py  cost_estimator.py  latency_analyzer.py  llm_judge.py  quality_analyzer.py  token_analyzer.py
observatory/integrations/: __init__.py  autogen.py  base.py  langgraph.py  openai.py
observatory/optimizers/: __init__.py  cache_layer.py  model_router.py  prompt_optimizer.py
templates/: config_readme.md  observatory_config.py  tracking_template.py
tests/: __init__.py  audit_schema.py  conftest.py  diagnose_db.py  test_cache.py  test_cost_estimator.py  test_debug.py  test_judge.py  test_multiple_agents.py  test_observatory.py  test_prompt_optimizer.py  test_real_api.py  test_router.py
tests/fixtures/: __init__.py  sample_calls.py
tests/integration/: __init__.py  test_metadata_router.py  test_stories_router.py
tests/unit/: __init__.py
tests/unit/services/: __init__.py  test_cache_service.py  test_cost_service.py  test_latency_service.py  test_optimization_service.py  test_prompt_service.py  test_quality_service.py  test_routing_service.py  test_token_service.py
(+75 files in other folders)
