[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-observatory"
version = "0.2.0"
description = "Comprehensive monitoring and optimization toolkit for AI/LLM applications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Bryan", email = "bryan@example.com"}
]
keywords = [
    "ai",
    "llm",
    "monitoring",
    "observability",
    "optimization",
    "machine-learning",
    "openai",
    "azure",
    "anthropic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core dependencies
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    # API dependencies
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    # Data analysis
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",       # For coverage reports
    "httpx>=0.25.0",           # For testing FastAPI
    "black>=23.0.0",
    "ruff>=0.1.0",
]
dashboard = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-agent-observatory"
Documentation = "https://github.com/yourusername/ai-agent-observatory#readme"
Repository = "https://github.com/yourusername/ai-agent-observatory"
Issues = "https://github.com/yourusername/ai-agent-observatory/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["observatory*", "api*"]

[tool.setuptools.package-data]
observatory = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=api",
    "--cov=observatory",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "api: API endpoint tests",
    "slow: Slow running tests",
]